--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clear",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kpatel1010.github.io/currency-converter",
+  "homepage": "https://kpatel1010.github.io/currency-generator",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
